--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "helloapp",
   "version": "1.0.0",
   "description": "node app ",
-  "main": "hello_app.js",
+  "main": "proj_find_all.js",
   "scripts": {
-  "start": "node hello_app.js"
+  "start": "node proj_find_all.js"
 },
   "repository": {
   "type": "git",
